src/test/deca/test_compilateur/context/valid/created/this/setter.deca
// Description :
//		un setter classique
//
// Resultats :
//		Ok

class A {
int x;
void setX(int x){
	this.x=x;
}

}