src/test/deca/test_compilateur/context/invalid/created/decl_class/double_field.deca
// Description :
//    field a déclaré deux fois
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(2.4) L’identificateur a est déjà défini

class A{
int a;
boolean a;
}
